# qxmlrpc

./: CMakeLists.txt
xmlrpc/: CMakeLists.txt  client.cpp  client.h  server.h  variant.h
